--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=php-project
 sonar.projectName=php-project
-sonar.sources=admin,includes,classes,user,config
-sonar.inclusions=.
+sonar.sources=.
+sonar.inclusions=**/*.php
 sonar.exclusions=**/vendor/**,**/*.sql,**/*.md
 sonar.host.url=http://16.171.233.226:9000
